# fw-nrfconnect-nrf-1

./: .checkpatch.conf  CMakeLists.txt  CODEOWNERS  Jenkinsfile  Kconfig.nrf  ram_loader.rst  west.yml
applications/machine_learning/: CMakeLists.txt
applications/matter_weather_station/: CMakeLists.txt  prj.conf  thingy53_nrf5340_cpuapp.overlay
applications/nrf_desktop/: CMakeLists.txt
applications/ram_loader/: CMakeLists.txt  Kconfig  app.overlay  prj.conf  run_from_mram.conf  run_from_mram.overlay  run_from_ram.conf  sample.yaml  sysbuild.cmake  sysbuild.conf
cmake/: extensions.cmake  mcuboot.cmake  multi_image.cmake  partition_manager.cmake  reports.cmake  s1.cmake
cmake/sysbuild/: suit.cmake
doc/nrf/: samples.rst  ug_bootloader.rst  ug_bootloader_external_flash.rst  ug_nrf5340.rst  (+2 more)
include/: bl_crypto.h  bl_validation.h  ccm_mac.h  dfu_data_writer.h  dfu_data_writer.rst  dfu_target_flash.h  flash_map_pm.h  fota_download.h  http_fota_dl.h  http_fota_dl.rst  nsb_crypto.h  pcd.h
lib/: CMakeLists.txt  Kconfig
modules/: Kconfig.mcuboot
samples/: CMakeLists.txt  Kconfig
samples/bluetooth/mesh/light/boards/: thingy53_nrf5340_cpuapp.conf
samples/bluetooth/mesh/light_switch/: prj.conf
samples/bluetooth/mesh/light_switch/boards/: thingy53_nrf5340_cpuapp.conf
samples/bluetooth/peripheral_lbs/boards/: pm_static_thingy53_nrf5340_cpuapp.yml  thingy53_nrf5340_cpuapp.conf
samples/bluetooth/peripheral_lbs/child_image/: mcuboot.conf
samples/bluetooth/peripheral_uart/: prj.conf
samples/bluetooth/peripheral_uart/boards/: thingy53_nrf5340_cpuapp.conf
samples/bootloader/: pm.yml  prj.conf
samples/bootloader/src/: main.c
samples/crypto/aes_cbc/: sample.yaml
samples/crypto/aes_ccm/: sample.yaml
samples/crypto/aes_ctr/: sample.yaml
samples/crypto/aes_gcm/: sample.yaml
samples/crypto/chachapoly/: sample.yaml
samples/crypto/crypto_common/: crypto_common.h
samples/crypto/ecdh/: sample.yaml
samples/crypto/ecdsa/: sample.yaml
samples/crypto/ecdsa/boards/: nrf9160dk_nrf9160ns.conf
samples/crypto/hkdf/: sample.yaml
samples/crypto/hkdf/src/: main.c
samples/crypto/hmac/: sample.yaml
samples/crypto/persistent_key_usage/: prj.conf  sample.yaml
samples/crypto/persistent_key_usage/boards/: nrf9160dk_nrf9160.conf
samples/crypto/rng/: sample.yaml
samples/crypto/rsa/: sample.yaml
samples/crypto/rsa/src/: main.c
samples/crypto/sha256/: sample.yaml
samples/crypto/sha256/boards/: nrf9160dk_nrf9160ns.conf
samples/nrf5340/boot/: CMakeLists.txt  README.rst  pm.yml  prj.conf
samples/nrf5340/boot/src/: main.c
samples/nrf5340/netboot/: README.rst  prj.conf
samples/nrf5340/netboot/src/: main.c
samples/nrf9160/aws_fota/src/: main.c
samples/nrf9160/fmfu_smp_svr/: prj.conf
samples/nrf9160/fmfu_smp_svr/src/: main.c
samples/nrf9160/http_application_update/: Kconfig  README.rst  prj.conf
samples/nrf9160/http_application_update/src/: main.c
samples/nrf9160/http_update/application_update/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/nrf9160/http_update/application_update/src/: main.c
samples/nrf9160/http_update/common/include/: update.h
samples/nrf9160/http_update/common/src/: update.c
samples/nrf9160/http_update/delta_modem_update/src/: main.c
samples/nrf9160/http_update/full_modem_update/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/nrf9160/http_update/full_modem_update/src/: main.c
samples/nrf9160/http_update/modem_delta_update/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/nrf9160/http_update/modem_delta_update/src/: main.c
samples/nrf9160/http_update/src/: update.c
samples/nrf9160/mgmt_fmfu/: CMakeLists.txt  prj.conf
samples/nrf9160/mqtt_simple/: prj.conf
samples/nrf9160/secure_services/: b0_mcuboot_overlay.conf.orig  sample.yaml.orig
samples/nrf9160/secure_services/src/: main.c
samples/nrf9160/spm/: CMakeLists.txt  pm.yml  prj.conf
samples/nrf_rpc/entropy_nrf53/cpunet/src/: entropy_ser.c
samples/nsb/: pm.yml
samples/nsb/src/: main.c
samples/production_bootloader/: CMakeLists.txt  Kconfig  prj.conf  readme.txt
samples/production_bootloader/custom_mdk/: arm_startup_nrf52.s  gcc_startup_nrf52.S  system_nrf52.c
samples/production_bootloader/include/: recovery_bootloader.h  slip.h  uart_transport.h
samples/production_bootloader/pca10040/blank/armgcc/: Makefile  uart_recovery_bootloader_gcc_nrf52.ld
samples/production_bootloader/script/: recovery_bl.py  recovery_bootloader_cli.py  set_pinreset.py  setup_script.py  upgrade_script.py  zephyr.hex
samples/production_bootloader/src/: main.c  recovery_bootloader.c  slip.c  uart_transport.c
samples/sdfw/ssf_client/: uart136.overlay
samples/tfm/tfm_hello_world/: prj.conf
scripts/: fota_modem_pack.py  partition_manager.py  partition_manager_output.py  partition_manager_report.py  tobias.py
subsys/: CMakeLists.txt  Kconfig  Kconfig.orig  flash_img_raw.c
subsys/dfu/fmfu_fdev/: CMakeLists.txt  Kconfig
subsys/dfu/fmfu_fdev/cddl/: CMakeLists.txt  license.cmake
subsys/dfu/fmfu_fdev/include/: modem_update_decode.h  modem_update_types.h
subsys/dfu/fmfu_fdev/src/: fmfu_fdev.c  modem_update_decode.c
sysbuild/: CMakeLists.txt  Kconfig.ram_loader  Kconfig.sysbuild  ram_loader.cmake
tests/subsys/dfu/dfu_target_stream/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/dfu/dfu_target_stream/src/: main.c
tests/subsys/dfu/fmfu_fdev/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/dfu/fmfu_fdev/src/: main.c
tests/subsys/pcd/: CMakeLists.txt  pm_static.yml  prj.conf  prj_nrf52840_pca10056.conf
tests/subsys/pcd/src/: main.c
(+187 files in other folders)
